--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,13 @@
     "enum": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^1.12.4",
     "popper.js": "^1.14.3",
     "sockjs-client": "^1.1.5",
     "stomp-websocket": "^2.3.4-next",
     "sweetalert": "^2.1.0",
     "toastr": "^2.1.4",
     "topojson": "^3.0.2",
+    "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.5.11",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
