--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "enum": "^2.5.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "mobile-detect": "^1.4.2",
     "popper.js": "^1.14.3",
     "sockjs-client": "^1.1.5",
     "stomp-websocket": "^2.3.4-next",
@@ -26,6 +27,8 @@
     "vue": "^2.5.11",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
+    "vue2-editor": "^2.6.6",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
@@ -49,6 +52,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
+    "vue-sortable": "^0.1.3",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
