--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "vue": "^2.5.11",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
-    "vue2-editor": "^2.4.3",
+    "vue2-editor": "^2.6.6",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
@@ -51,6 +51,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "vue-loader": "^13.0.5",
     "vue-sortable": "^0.1.3",
     "vue-template-compiler": "^2.4.4",
