--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "serve-favicon": "~2.4.2",
     "sharp": "^0.20.2",
     "socket.io": "^2.1.0",
+    "ua-parser-js": "^0.7.18",
     "web-push": "^3.3.1"
   }
 }
