--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.5.11",
     "vue-i18n": "^8.0.0",
+    "vue-pdf": "^3.3.1",
     "vue-router": "^3.0.1",
     "vue2-editor": "^2.6.6",
     "vuedraggable": "^2.16.0",
