--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -8,6 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Programm starten",
+            "console": "integratedTerminal",
             "program": "${workspaceFolder}/app.js"
         }
     ]
