--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -132,7 +132,7 @@
         "no-empty-function": "error",
         "no-eq-null": "error",
         "no-eval": "error",
-        "no-extend-native": "error",
+        "no-extend-native": "off",
         "no-extra-bind": "error",
         "no-extra-label": "error",
         "no-extra-parens": "error",
