--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dent-exchange-webapp-prototype",
+  "name": "edition-bohemica-client",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "Sascha Dobschal <s.dobschal@tdsoftware.de>",
