--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.5.11",
     "vue-i18n": "^8.0.0",
     "vue-pdf": "^3.3.1",
+    "vue-recaptcha": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue2-editor": "^2.6.6",
     "vuedraggable": "^2.16.0",
