--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "nodemon": "^1.17.4",
+    "request": "^2.88.0",
     "serve-favicon": "~2.4.2",
     "sharp": "^0.20.2",
     "socket.io": "^2.1.0",
