--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -4,6 +4,19 @@
     // Weitere Informationen finden Sie unter https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Remote",
+            "address": "localhost",
+            "port": 9221,
+            "localRoot": "${workspaceFolder}",
+            "remoteRoot": "/root/NodeJS/edition-bohemica/server",
+            "restart": false,
+            "sourceMaps": false,
+            "outFiles": []
+        },
         {
             "type": "node",
             "request": "launch",
