--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
   "name": "edition-bohemica-server",
   "description": "edition bohemica",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
+  "author": "Sascha Dobschal",
   "scripts": {
     "start": "node ./app.js"
   },
