--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "js-sha512": "^0.7.1",
     "jsonwebtoken": "^8.2.1",
     "mongodb-migrations": "^0.8.5",
+    "mongodb-restore": "^1.6.2",
     "mongoose": "^5.1.0",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
