--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Hetzner Deployment
 on: [push, pull_request]
 jobs:
   deploy:
@@ -25,7 +25,7 @@ jobs:
       - name: Check out the source
         run: ssh hetzner 'cd /root/deployments/edition-bohemica && git fetch && git reset --hard origin/master'
 
-      - name: Stop old server
+      - name: Stop old server and build new image
         run: ssh hetzner 'cd /root/deployments/edition-bohemica && docker compose down app && docker compose build app --no-cache'
 
       - name: Start the server
