--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "jquery": "^3.7.1",
     "babel-polyfill": "^6.26.0",
     "enum": "^2.5.0",
     "font-awesome": "^4.7.0",
